2008-01-29  Ben Motmans <ben.motmans@gmail.com> 

	* Dialogs/CreateDatabaseDialog.cs, Widgets/CreateDatabaseWidget.cs: improved
	  design of the create database dialog
	* gtk-gui/MonoDevelop.Database.Designer.CreateDatabaseWidget.cs,
	  gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.Database.Designer.CreateDatabaseDialog.cs,
	  gtk-gui/gui.stetic: auto generated code

2008-01-28  Ben Motmans <ben.motmans@gmail.com> 

	* Dialogs/TableEditorDialog.cs, Dialogs/ProcedureEditorDialog.cs,
	  Dialogs/ViewEditorDialog.cs, Dialogs/CreateDatabaseDialog.cs,
	  Widgets/ColumnsEditorWidget.cs,
	  Widgets/PrimaryKeyConstraintEditorWidget.cs,
	  Widgets/CheckConstraintEditorWidget.cs, Widgets/TriggersEditorWidget.cs,
	  Widgets/ConstraintsEditorWidget.cs,
	  Widgets/ForeignKeyConstraintEditorWidget.cs,
	  Widgets/UniqueConstraintEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.UniqueConstraintEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.ColumnsEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.CheckConstraintEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.TriggersEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.PrimaryKeyConstraintEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.CommentEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.ForeignKeyConstraintEditorWidget.cs,
	  gtk-gui/gui.stetic: make use of settings classes to change the behavior
	  of the dialogs

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Designer.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Designer.addin.xml: Updated add-in category and
	  description.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Designer.mdp: Updated project file. The order of
	  extended properties won't change anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Designer.addin.xml: Bump add-in versions.
