@@ -1,59 +1,0 @@
-// ------------------------------------------------------------------------------
-//  <autogenerated>
-//      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.42
-// 
-//      Changes to this file may cause incorrect behavior and will be lost if 
-//      the code is regenerated.
-//  </autogenerated>
-// ------------------------------------------------------------------------------
-
-namespace MonoDevelop.Database.Designer {
-    
-    
-    public partial class CreateDatabaseWidget {
-        
-        private Gtk.Table table;
-        
-        private Gtk.Entry entryDatabase;
-        
-        private Gtk.Label label3;
-        
-        protected virtual void Build() {
-            Stetic.Gui.Initialize(this);
-            // Widget MonoDevelop.Database.Designer.CreateDatabaseWidget
-            Stetic.BinContainer.Attach(this);
-            this.Name = "MonoDevelop.Database.Designer.CreateDatabaseWidget";
-            // Container child MonoDevelop.Database.Designer.CreateDatabaseWidget.Gtk.Container+ContainerChild
-            this.table = new Gtk.Table(((uint)(1)), ((uint)(2)), false);
-            this.table.Name = "table";
-            this.table.RowSpacing = ((uint)(6));
-            this.table.ColumnSpacing = ((uint)(6));
-            // Container child table.Gtk.Table+TableChild
-            this.entryDatabase = new Gtk.Entry();
-            this.entryDatabase.CanFocus = true;
-            this.entryDatabase.Name = "entryDatabase";
-            this.entryDatabase.IsEditable = true;
-            this.entryDatabase.InvisibleChar = '●';
-            this.table.Add(this.entryDatabase);
-            Gtk.Table.TableChild w1 = ((Gtk.Table.TableChild)(this.table[this.entryDatabase]));
-            w1.LeftAttach = ((uint)(1));
-            w1.RightAttach = ((uint)(2));
-            w1.YOptions = ((Gtk.AttachOptions)(4));
-            // Container child table.Gtk.Table+TableChild
-            this.label3 = new Gtk.Label();
-            this.label3.Name = "label3";
-            this.label3.LabelProp = AddinCatalog.GetString("Database:");
-            this.table.Add(this.label3);
-            Gtk.Table.TableChild w2 = ((Gtk.Table.TableChild)(this.table[this.label3]));
-            w2.XOptions = ((Gtk.AttachOptions)(4));
-            w2.YOptions = ((Gtk.AttachOptions)(4));
-            this.Add(this.table);
-            if ((this.Child != null)) {
-                this.Child.ShowAll();
-            }
-            this.Show();
-            this.entryDatabase.Changed += new System.EventHandler(this.DatabaseNameChanged);
-        }
-    }
-}
